deploy/metricsdemo/md-dep.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: metricdemo
  namespace: dev
  annotations:
    flux.weave.works/tag.podinfod: glob:*
    flux.weave.works/automated: 'true'
spec:
  replicas: 4
  selector:
    matchLabels:
      app: metricdemo
  template:
    metadata:
      labels:
        app: metricdemo
      annotations:
        prometheus.io/scrape: 'true'
    spec:
      containers:
      - name: metricdemod
        image: quay.io/brice/metrics-demo
        ports:
        - containerPort: 3000
        readinessProbe:
          httpGet:
            path: /readyz
            port: 3000
          initialDelaySeconds: 1
          periodSeconds: 5
          failureThreshold: 1
        livenessProbe:
          httpGet:
            path: /healthz
            port: 3000
          initialDelaySeconds: 1
          periodSeconds: 10
          failureThreshold: 2
        resources:
          requests:
            memory: "32Mi"
            cpu: "10m"
