deploy/metricsdemo/md-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: metricdemo
  namespace: dev
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
      name: http
  selector:
    app: metricdemo
